--- a/test/molecule-role/molecule/kubernetes/files/template/kustomization.yaml
+++ b/test/molecule-role/molecule/kubernetes/files/template/kustomization.yaml
@@ -23,9 +23,9 @@ configMapGenerator:
       - STS_CLUSTER_NAME={{ cluster_name }}
 
 images:
-  - name: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-test
+  - name: docker.io/stackstate/stackstate-agent-test
     newTag: {{ agent_current_branch }}
-  - name: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-cluster-agent-test
+  - name: docker.io/stackstate/stackstate-cluster-agent-test
     newTag: {{ agent_current_branch }}
 
 secretGenerator:
