--- a/test/molecule-role/molecule/common/files/docker-compose.base.yml
+++ b/test/molecule-role/molecule/common/files/docker-compose.base.yml
@@ -132,7 +132,7 @@ services:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
 
   stackstate-agent:
-    image: artifactory.stackstate.io/docker-virtual/stackstate/${AGENT_DOCKER_REPO}:${AGENT_VERSION}
+    image: docker.io/stackstate/${AGENT_DOCKER_REPO}:${AGENT_VERSION}
     network_mode: "host"
     pid: "host"
     privileged: true
