--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -755,7 +755,7 @@ molecule_compose_success_cleanup:
     MOLECULE_SCENARIO: compose
   dependencies:
     - molecule_compose_test
-    - molecule_compose_create
+    # - molecule_compose_create
   needs:
     - molecule_compose_test
     # - molecule_compose_create
