--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -3,6 +3,7 @@ image: artifactory.stackstate.io/docker-virtual/stackstate/stackstate-agent-runn
 stages:
   - manual_cleanup
   - prepare
+  - prepare_temp
   - build
   - test
   - pre_release
@@ -697,7 +698,7 @@ pre_release_cluster_agent_image:
 # Primary test steps for all the molecule builds
 .molecule_test_cache: &molecule_test_cache
   <<: *molecule_cache
-  stage: acceptance
+  stage: prepare_temp
   script:
     - cd $CI_PROJECT_DIR/test
     - ./molecule3.sh --base-config ./molecule/$MOLECULE_SCENARIO/provisioner.run.yml prepare --force --scenario-name $MOLECULE_SCENARIO # This is the secondary prepare step which does the run file step
@@ -749,7 +750,7 @@ molecule_compose_test:
   dependencies:
     - molecule_compose_create
   needs:
-    - pre_release_main_agent_image
+    # - pre_release_main_agent_image
     - molecule_compose_create
 
 molecule_compose_failure_cleanup:
