--- a/test/molecule-role/molecule/compose/playbook.create.yml
+++ b/test/molecule-role/molecule/compose/playbook.create.yml
@@ -33,4 +33,4 @@
     - include_tasks: ../common/create/wait-for-instance-creation-to-complete.yml
     - include_tasks: ../common/create/wait-for-ssh.yml
     - include_tasks: ../common/create/wait-for-boot-process-to-finish.yml
-    - include_tasks: ../common/create/log-inventory.yml
+    # - include_tasks: ../common/create/log-inventory.yml
