--- a/test/molecule-role/molecule/compose/playbook.prepare.yml
+++ b/test/molecule-role/molecule/compose/playbook.prepare.yml
@@ -24,11 +24,11 @@
           DOCKER_HOST_IP={{ ansible_docker0['ipv4']['address'] }}
           STACKSTATE_BRANCH={{ stackstate_branch }}
         dest: /home/ubuntu/.env
-    - include_tasks: ../common/prepare/docker-compose-pull.yml
+    # - include_tasks: ../common/prepare/docker-compose-pull.yml
 
-- name: Prepare Connection
-  hosts: localhost
-  connection: local
-  gather_facts: true
-  tasks:
-    - include_tasks: ../common/prepare/encrypt-key.yml
+# - name: Prepare Connection
+#   hosts: localhost
+#   connection: local
+#   gather_facts: true
+#   tasks:
+#     - include_tasks: ../common/prepare/encrypt-key.yml
