--- a/test/molecule-role/molecule/compose/playbook.run.yml
+++ b/test/molecule-role/molecule/compose/playbook.run.yml
@@ -1,11 +1,11 @@
 ---
-- name: Prepare Connection
-  hosts: localhost
-  connection: local
-  gather_facts: true
-  tasks:
-    - include_tasks: ../common/prepare/keypair.yml
-    - include_tasks: ../common/create/wait-for-boot-process-to-finish.yml
+# - name: Prepare Connection
+#   hosts: localhost
+#   connection: local
+#   gather_facts: true
+#   tasks:
+#     - include_tasks: ../common/prepare/keypair.yml
+#     - include_tasks: ../common/create/wait-for-boot-process-to-finish.yml
 
 - name: Prepare Trace Java
   hosts: trace-java-demo
