Testing various things

--- a/test/molecule-role/molecule/common/create/keypair.yml
+++ b/test/molecule-role/molecule/common/create/keypair.yml
@@ -1,45 +1,60 @@
 ---
-- name: Test for presence of local keypair
-  stat:
-    path: "{{ keypair_path }}"
-  register: keypair_local
-
-- name: Delete remote keypair
+- name: Create Key
   ec2_key:
-    name: "{{ keypair_name }}"
-    state: absent
-  when: not keypair_local.stat.exists
-
-- name: Create keypair
-  ec2_key:
-    name: "{{ keypair_name }}"
-  register: keypair
+    name: keypair_test
+  register: keypair_id
 
 - name: Persist the keypair
   copy:
     dest: "{{ keypair_path }}"
     content: "{{ keypair.key.private_key }}"
     mode: 0600
-  when: keypair.changed
 
-- name: (LOCAL) Dump the ssh private key in the artifact directory
-  when: keypair.changed and (ci_project_dir is undefined or ci_project_dir == "")
+- name: Persist the keypair for cache
   copy:
-    dest: ".molecule/{{ molecule_scenario_name }}/ssh_key"
+    dest: "{{ ci_project_dir }}/.molecule/{{ molecule_scenario_name }}/private_key"
     content: "{{ keypair.key.private_key }}"
     mode: 0600
 
-- name: (CI) Dump the ssh private key in the artifact directory
-  when: keypair.changed and (ci_project_dir is defined and ci_project_dir != "")
-  copy:
-    dest: "{{ci_project_dir}}/.molecule/{{ molecule_scenario_name }}/ssh_key"
-    content: "{{ keypair.key.private_key }}"
-    mode: 0600
+# - name: Test for presence of local keypair
+#   stat:
+#     path: "{{ keypair_path }}"
+#   register: keypair_local
 
-- name: Get SSH key contents
-  command: cat {{ci_project_dir}}/.molecule/{{molecule_scenario_name}}/ssh_key
-  register: command_output
+# - name: Delete remote keypair
+#   ec2_key:
+#     name: "{{ keypair_name }}"
+#     state: absent
+#   when: not keypair_local.stat.exists
 
-- name: Print SSH key contents to console
-  debug:
-    msg: "{{command_output.stdout}}"
+# - name: Create keypair
+#   ec2_key:
+#     name: "{{ keypair_name }}"
+#   register: keypair
+
+# - name: Persist the keypair
+#   copy:
+#     dest: "{{ keypair_path }}"
+#     content: "{{ keypair.key.private_key }}"
+#     mode: 0600
+#   when: keypair.changed
+
+# - name: Copy file with owner and permissions
+#   copy:
+#     src: "{{ keypair_path }}"
+#     dest: "{{ ci_project_dir }}/.molecule/{{ molecule_scenario_name }}/ssh_key"
+#     mode: '0644'
+
+# - name: (LOCAL) Dump the ssh private key in the artifact directory
+#   when: keypair.changed and (ci_project_dir is undefined or ci_project_dir == "")
+#   copy:
+#     dest: ".molecule/{{ molecule_scenario_name }}/ssh_key"
+#     content: "{{ keypair.key.private_key }}"
+#     mode: 0600
+#
+# - name: (CI) Dump the ssh private key in the artifact directory
+#   when: keypair.changed and (ci_project_dir is defined and ci_project_dir != "")
+#   copy:
+#     dest: "{{ci_project_dir}}/.molecule/{{ molecule_scenario_name }}/ssh_key"
+#     content: "{{ keypair.key.private_key }}"
+#     mode: 0600
