--- a/test/molecule-role/molecule/common/create/create-molecule-instances.yml
+++ b/test/molecule-role/molecule/common/create/create-molecule-instances.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create molecule instance(s)
   ec2_instance:
-    key_name: "{{ keypair_name }}"
+    key_name: "{{ keypair_id }}"
     image_id: "{{ item.image }}"
     instance_type: "{{ item.instance_type }}"
     vpc_subnet_id: "{{ item.vpc_subnet_id }}"
