--- a/test/molecule-role/molecule/common/create/create-structure.yml
+++ b/test/molecule-role/molecule/common/create/create-structure.yml
@@ -1,12 +1,5 @@
 ---
-- name: (CI) Create the molecule temp storage artifactory directory
-  when: ci_project_dir is defined and ci_project_dir != ""
+- name: Create the molecule temp storage artifactory directory
   file:
     path: "{{ ci_project_dir }}/.molecule/{{ molecule_scenario_name }}"
-    state: directory
-
-- name: (LOCAL) Create the molecule temp storage artifactory directory
-  when: ci_project_dir is undefined or ci_project_dir == ""
-  file:
-    path: ".molecule/{{ molecule_scenario_name }}"
     state: directory
