--- a/test/molecule-role/molecule/common/prepare/keypair.yml
+++ b/test/molecule-role/molecule/common/prepare/keypair.yml
@@ -1,33 +1,17 @@
 ---
-- name: (CI) Restore artifact ssh key
-  when: ci_project_dir is defined and ci_project_dir != ""
-  copy:
-    src: "{{ci_project_dir}}/.molecule/{{ molecule_scenario_name }}/ssh_key"
-    dest: "{{ keypair_path }}"
-    mode: 0600
-
-- name: (LOCAL) Restore artifact ssh key
-  when: ci_project_dir is undefined or ci_project_dir == ""
-  copy:
-    src: ".molecule/{{ molecule_scenario_name }}/ssh_key"
-    dest: "{{ keypair_path }}"
-    mode: 0600
-
-- name: Get SSH key contents
-  command: cat {{ci_project_dir}}/.molecule/{{molecule_scenario_name}}/ssh_key
-  register: command_output
-
-- name: Print SSH key contents to console
-  debug:
-    msg: "{{command_output.stdout}}"
-
-- name: Get Inventory contents
-  command: cat {{ci_project_dir}}/tmp_molecule_inventory/instance_config.yml
-  register: inventory_output
-
-- name: Print Inventory contents to console
-  debug:
-    msg: "{{inventory_output.stdout}}"
+# - name: (CI) Restore artifact ssh key
+#   when: ci_project_dir is defined and ci_project_dir != ""
+#   copy:
+#     src: "{{ci_project_dir}}/.molecule/{{ molecule_scenario_name }}/ssh_key"
+#     dest: "{{ keypair_path }}"
+#     mode: 0600
+#
+# - name: (LOCAL) Restore artifact ssh key
+#   when: ci_project_dir is undefined or ci_project_dir == ""
+#   copy:
+#     src: ".molecule/{{ molecule_scenario_name }}/ssh_key"
+#     dest: "{{ keypair_path }}"
+#     mode: 0600
 
 - name: Wait (SSH Key Restore)
   pause:
