--- a/test/molecule-role/molecule/common/create/keypair.yml
+++ b/test/molecule-role/molecule/common/create/keypair.yml
@@ -7,19 +7,13 @@
 - name: Persist the keypair
   copy:
     dest: "{{ keypair_path }}"
-    content: "{{ keypair_id.key.private_key }}"
+    content: "{{ keypair_id }}"
     mode: 0600
 
 - name: Persist the keypair for cache
   copy:
     dest: "{{ ci_project_dir }}/.molecule/{{ molecule_scenario_name }}/private_key"
-    content: "{{ keypair_id.key.private_key }}"
-    mode: 0600
-
-- name: Persist the keypair for init connection
-  copy:
-    dest: "{{ keypair_path }}"
-    content: "{{ keypair_id.key.private_key }}"
+    content: "{{ keypair_id }}"
     mode: 0600
 
 # - name: Test for presence of local keypair
