--- a/test/molecule-role/molecule/common/create/create-molecule-instances-sda-volume.yml
+++ b/test/molecule-role/molecule/common/create/create-molecule-instances-sda-volume.yml
@@ -1,7 +1,7 @@
 ---
 - name: Create molecule instance(s)
   ec2_instance:
-    key_name: "{{ keypair_id }}"
+    key_name: "{{ keypair_name }}"
     image_id: "{{ item.image }}"
     instance_type: "{{ item.instance_type }}"
     vpc_subnet_id: "{{ item.vpc_subnet_id }}"
