--- a/test/molecule-role/molecule/compose/playbook.prepare.yml
+++ b/test/molecule-role/molecule/compose/playbook.prepare.yml
@@ -4,9 +4,9 @@
   connection: local
   gather_facts: true
   tasks:
-    - name: Test reachability to {{ item.address }}
+    - name: "Test reachability to {{ item.address }}"
       net_ping:
-        dest: {{ item.address }}
+        dest: "{{ item.address }}"
       with_items: "{{ lookup('file', molecule_instance_config) | molecule_from_yaml }}"
 
     - include_tasks: ../common/prepare/gather-facts.yml
