--- a/test/molecule-role/molecule/compose/playbook.prepare.yml
+++ b/test/molecule-role/molecule/compose/playbook.prepare.yml
@@ -5,12 +5,11 @@
   gather_facts: true
   tasks:
     - include_tasks: ../common/prepare/gather-facts.yml
-
     - name: Print to console
       debug:
         msg: "{{ item }}"
       with_items: "{{ lookup('file', molecule_instance_config) | molecule_from_yaml }}"
-
+    - include_tasks: ../common/create/wait-for-ssh.yml
     - include_tasks: ../common/create/wait-for-3-minutes.yml
 
 - name: Prepare Trace Java
