--- a/test/molecule-role/molecule/common/create/wait-for-instance-creation-to-complete.yml
+++ b/test/molecule-role/molecule/common/create/wait-for-instance-creation-to-complete.yml
@@ -15,7 +15,7 @@
       'private_address': "{{ item.instances[0].private_ip_address }}",
       'user': "{{ item.item.item.ssh_user }}",
       'port': "{{ ssh_port }}",
-      'identity_file': "{{ ci_project_dir }}/.molecule/{{ molecule_scenario_name }}/ssh_key",
+      'identity_file': "{{ keypair_path }}",
       'instance_ids': "{{ item.instance_ids }}", }
   with_items: "{{ ec2_jobs.results }}"
   register: "instance_config_dict"
