--- a/.gitlab-ci-agent.yml
+++ b/.gitlab-ci-agent.yml
@@ -666,7 +666,7 @@ pre_release_cluster_agent_image:
       - $CI_PROJECT_DIR/.molecule
       - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/topic-*.json
       - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/*.log
-      # - $MOLECULE_EPHEMERAL_DIRECTORY
+      - $MOLECULE_EPHEMERAL_DIRECTORY
 
 # Base artifacts for create and test steps
 .molecule_artifacts: &molecule_artifacts
@@ -676,7 +676,7 @@ pre_release_cluster_agent_image:
       - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/topic-*.json
       - $CI_PROJECT_DIR/test/molecule-role/molecule/$MOLECULE_SCENARIO/*.log
       - $CI_PROJECT_DIR/.molecule
-      # - $MOLECULE_EPHEMERAL_DIRECTORY
+      - $MOLECULE_EPHEMERAL_DIRECTORY
     expire_in: 1 week
 
 # Primary create steps for all the molecule builds
